Stuck-on-animation-need-to-fix

--- a/style.css
+++ b/style.css
@@ -19,8 +19,7 @@ body, html {
     justify-content:space-around;
     
     background-color: gold;
-    /* width: 800px;
-    height: 150px; */
+    
     
 }
 
@@ -31,20 +30,17 @@ body, html {
 .scoreBoard {
     background-color: cornflowerblue;
     text-align: center;
-    /* width: 800px;
-    height: 200px; */
+    
 }
 .questions {
     background-color: skyblue;
     text-align: center;
-    /* width: 800px;
-    height: 400px; */
+    
 }
 
 .scoreCount {
     background-color: darkgoldenrod;
-    /* width: 800px;
-    height: 50px; */
+    
 }
 
 
@@ -65,8 +61,7 @@ body, html {
    display: flex;
    flex-direction: column;
    background-color: coral;
-   /* width: 800px;
-   height: 100%; */
+   
 }
 
 #racer {
@@ -75,11 +70,24 @@ body, html {
     border: 2px solid blueviolet;
     align-items: center;
     justify-content: center;
+    
+    
 
 }
 
-.racer img {
+.racer {
     width: 50px;
     height: 50px;
-
+    position: relative;
+    animation-name: example;
+    animation-duration: 1s;
+    
 }
+
+@keyframes example {
+    0% {left: 0; top: 0;}
+    20% {left: 20; top: 20%}
+    40% {left: 40; top: 40;}
+    60% {left: 60; top: 60;}
+    100% {left: 100; top: 100}
+} 
